<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/ll_timer"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:background="@drawable/white_box">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_timer"
                android:textColor="@color/purple"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="25sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ll_playerOne"
                android:layout_marginEnd="20dp"
                android:background="@drawable/white_dashed_border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/white_box">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_playerOne"
                        android:gravity="center"
                        android:text="@string/tv_playerOne"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/purple"
                        android:textSize="20sp"
                        android:maxLines="1"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/x_image"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_playerOneScore"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/white_box">

                    <TextView
                        android:id="@+id/tv_playerOneScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tv_playerOneScore"
                        android:textColor="@color/purple"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ll_playerTwo"
                android:layout_marginStart="20dp"
                android:background="@drawable/transparent_dashed_border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/white_box">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_playerTwo"
                        android:gravity="center"
                        android:text="@string/tv_playerTwo"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/purple"
                        android:textSize="20sp"
                        android:maxLines="1"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/o_image"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_playerTwoScore"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/white_box">

                    <TextView
                        android:id="@+id/tv_playerTwoScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tv_playerTwoScore"
                        android:textColor="@color/purple"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/ll_playingField"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>